--- a/index.html
+++ b/index.html
@@ -16,3 +16,8 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
 </ p>
 
 <! --Tabela de Filmes--> <table border="1" cellspacing="0" cellpadding="10>"|
+         <tr>
+            <th>filme</th>
+            <th>imagem</th>
+            </tr>
+            </tr>
