--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ name="viewport" content="width=device-width, initial-scale=1.0"> ‹title>Catalo
 
 </head>
 <body style="background-color:
-aquamarine;"> <! --Cor de fundo bisica-→>
+aquamarine;"> <! --Cor de fundo basica-→>
 
-<! --Texto de Apresentadao--> <h1>Bem vindo ao Catalogo de Filmes</hi>
+<! --Texto de Apresentada--> <h1>Bem vindo ao Catalogo de Filmes</hi>
 </p>
 Aqui voce encontra uma selecao dos melhores filmes de todos os tempos. Aproveite para conhecer
 e
