--- a/index.html
+++ b/index.html
@@ -21,68 +21,68 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
             <th>imagem</th>
             </tr>
             </tr>
-            <td>Filme 1</td>
-            <td><img src="imagem1.jpg" alt="Imagem do Filme 1" width='100'></td>
+            <td>velozes e furiosos 2</td>
+            <td><img src="2_Fast_2_Furious_2003.jpg" alt="Imagem do Filme 1" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 2</td>
-            <td><img src="imagem2.jpg" alt="Imagem do Filme 2" width='100'></td>
+            <td>velozes e furiosos 5</td>
+            <td><img src="61thyihqq1L._AC_UF894,1000_QL80_.jpg" alt="Imagem do Filme 2" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 3</td>
-            <td><img src="imagem3.jpg" alt="Imagem do Filme 3" width='100'></td>
+            <td>velozes e furiosos 7</td>
+            <td><img src="054397.webp" alt="Imagem do Filme 3" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 4</td>
-            <td><img src="imagem4.jpg" alt="Imagem do Filme 4" width='100'></td>
+            <td>scooby doo</td>
+            <td><img src="90349eb449a7cf3161e743765e8114ddb3585f2cf6ed04810452b10bc0974f87 (1).jpg" alt="Imagem do Filme 4" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 5</td>
-            <td><img src="imagem5.jpg" alt="Imagem do Filme 5" width='100'></td>
+            <td>velozes e furiosos 8</td>
+            <td><img src="1578264-poster.webp" alt="Imagem do Filme 5" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 6</td>
-            <td><img src="imagem6.jpg" alt="Imagem do Filme 6" width='100'></td>
+            <td>vingadores ultimato</td>
+            <td><img src="2428965.jpg" alt="Imagem do Filme 6" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 7</td>
-            <td><img src="imagem7.jpg" alt="Imagem do Filme 7" width='100'></td>
+            <td>velozes e furiosos 9</td>
+            <td><img src="3385237.jpg" alt="Imagem do Filme 7" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 8</td>
-            <td><img src="imagem8.jpg" alt="Imagem do Filme 8" width='100'></td>
+            <td>velozes e furiosos 6</td>
+            <td><img src="20528636.webp" alt="Imagem do Filme 8" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 9</td>
-            <td><img src="imagem9.jpg" alt="Imagem do Filme 9" width='100'></td>
+            <td>as branquelas</td>
+            <td><img src="20534159.jpg-c_310_420_x-f_jpg-q_x-xxyxx.jpg" alt="Imagem do Filme 9" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 10</td>
-            <td><img src="imagem10.jpg" alt="Imagem do Filme 10" width='100'></td>
+            <td>avengers 5</td>
+            <td><img src="hq720.jpg" alt="Imagem do Filme 10" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 11</td>
-            <td><img src="imagem11.jpg" alt="Imagem do Filme 11" width='100'></td>
+            <td>velozes e furiosos 4</td>
+            <td><img src="images (1).jpeg" alt="Imagem do Filme 11" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 12</td>
-            <td><img src="imagem12.jpg" alt="Imagem do Filme 12" width='100'></td>
+            <td>a saga dos vingadores</td>
+            <td><img src="images (2).jpeg" alt="Imagem do Filme 12" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 13</td>
-            <td><img src="imagem13.jpg" alt="Imagem do Filme 13" width='100'></td>
+            <td>prison break</td>
+            <td><img src="images (4).jpeg" alt="Imagem do Filme 13" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 14</td>
-            <td><img src="imagem14.jpg" alt="Imagem do Filme 14" width='100'></td>
+            <td>velozes e furiosos 1</td>
+            <td><img src="images.jpeg" alt="Imagem do Filme 14" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 15</td>
-            <td><img src="imagem15.jpg" alt="Imagem do Filme 15" width='100'></td>
+            <td>the resident</td>
+            <td><img src="scale.webp" alt="Imagem do Filme 15" width='100'></td>
          </tr>
          <tr>
-            <td>Filme 16</td>
-            <td><img src="imagem16.jpg" alt="Imagem do Filme 16" width='100'></td>
+            <td>velozes e furiosos tokyo</td>
+            <td><img src="TFF-TokyoDrift-pôster.jpg" alt="Imagem do Filme 16" width='100'></td>
          </tr>
          </table>
 
