--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
          <tr>
             <th>filme</th>
             <th>imagem</th>
-            </tr>
+            <th>Sinopse</th>
+            <th>Assista o Trailller </th>
+
             </tr>
             <td>velozes e furiosos 2</td>
             <td><img src="2_Fast_2_Furious_2003.jpg" alt="Imagem do Filme 1" width='100'></td>
+            <td> x-policial Brian O'Conner se muda de Los Angeles para Miami para recomeçar sua vida. Ele acaba se envolvendo em rachas na sua nova cidade com seu amigo Tej e Suki. Suas aventuras terminam quando ele é preso e faz um acordo com agentes do FBI.x-policial Brian O'Conner se muda de Los Angeles para Miami para recomeçar sua vida. Ele acaba se envolvendo em rachas na sua nova cidade com seu amigo Tej e Suki. Suas aventuras terminam quando ele é preso e faz um acordo com agentes do FBI.
          </tr>
-         <tr>
+         </tr>
             <td>velozes e furiosos 5</td>
             <td><img src="61thyihqq1L._AC_UF894,1000_QL80_.jpg" alt="Imagem do Filme 2" width='100'></td>
          </tr>
