--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
          <tr>
             <td>as branquelas</td>
             <td><img src="20534159.jpg-c_310_420_x-f_jpg-q_x-xxyxx.jpg" alt="Imagem do Filme 9" width='100'></td>
-            <td>Dois irmãos agentes do FBI, Marcus e Kevin Copeland, acidentalmente evitam que bandidos sejam presos em uma apreensão de drogas. Como castigo, eles são forçados a escoltar um par de socialites nos Hamptons. Quando as meninas descobrem o plano da agência, elas se recusam a ir.
+            <td> Dois irmaos agentes do FBI, Marcus e Kevin Copeland, acidentalmente evitam que bandidos sejam presos em uma apreensao de drogas. Como castigo, eles são forçados a escoltar um par de socialites nos Hamptons. Quando as meninas descobrem o plano da agência, elas se recusam a ir.
          </tr>
          <tr>
             <td>avengers 5</td>
             <td><img src="hq720.jpg" alt="Imagem do Filme 10" width='100'></td>
-            <td>A trama acontece no momento em que o multiverso passa a sofrer com Incursões, quando duas Terras do multiverso colidem, causando a morte de seus habitantes e respectivos universos
+            <td>A trama acontece no momento em que o multiverso passa a sofrer com Incursoes, quando duas Terras do multiverso colidem, causando a morte de seus habitantes e respectivos universos
          </tr>
          <tr>
             <td>velozes e furiosos 4</td>
