--- a/index.html
+++ b/index.html
@@ -75,27 +75,34 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
          <tr>
             <td>velozes e furiosos 4</td>
             <td><img src="images (1).jpeg" alt="Imagem do Filme 11" width='100'></td>
-            <td>
+            <td>Dominic Toretto descobre que sua amada Letty foi assassinada e resolve procurar pelo autor do crime. Enquanto isso, o agente Brian O'Conner está em busca de um traficante de drogas. Eles percebem que talvez estejam atrás da mesma pessoa.
          </tr>
          <tr>
             <td>a saga dos vingadores</td>
             <td><img src="images (2).jpeg" alt="Imagem do Filme 12" width='100'></td>
+            <td>O Barão Zemo está determinado a destruir os Vingadores de uma vez por todas! E, pior, os Mestres do Terror invadiram a Mansão dos Vingadores para encontrar apenas uma vítima: Jarvis! Com seu quartel-general sob certo, os Heróis Mais Poderosos da Terra vão precisar de toda a ajuda que puderem ter - inclusive a de amigões da vizinhança como o Homem-Aranha! E as coisas vão ficar mais complicadas ainda quando o Doutor Destino e o Duende Macabro se envolverem! Será que os Vingadores sobreviverão a esse conflito?
+
+         
          </tr>
          <tr>
             <td>prison break</td>
             <td><img src="images (4).jpeg" alt="Imagem do Filme 13" width='100'></td>
+            <td>Michael Scofield é um homem desesperado em uma situação desesperada. Seu irmão, Lincoln Burrows, foi condenado por um crime que não cometeu e colocado no corredor da morte. Michael rende um banco para conseguir ser encarcerado junto ao irmão na penitenciária estadual de Fox River e coloca em ação u
          </tr>
          <tr>
             <td>velozes e furiosos 1</td>
             <td><img src="images.jpeg" alt="Imagem do Filme 14" width='100'></td>
+            <td>Brian O'Conner é um policial que se infiltra no submundo dos rachas de rua para investigar uma série de furtos. Enquanto tenta ganhar o respeito e a confiança do líder Dom Toretto, ele corre o risco de ser desmascarado
          </tr>
          <tr>
             <td>the resident</td>
             <td><img src="scale.webp" alt="Imagem do Filme 15" width='100'></td>
+            <td>Um médico arrogante abre os olhos de um residente idealista do primeiro ano para as realidades da vida hospitalar.
          </tr>
          <tr>
             <td>velozes e furiosos tokyo</td>
             <td><img src="TFF-TokyoDrift-pôster.jpg" alt="Imagem do Filme 16" width='100'></td>
+            <td> Sean Boswell é um piloto de rua que desafia seu rival e bate o carro no fim da corrida. Ele decide se mudar para o Japão para evitar a prisão nos Estados Unidos, já que os rachas não são nada populares com as autoridades. Em Tóquio, ele começa a aprender um excitante e perigoso estilo novo de compe
          </tr>
          </table>
 
