--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
             <td>velozes e furiosos 2</td>
             <td><img src="2_Fast_2_Furious_2003.jpg" alt="Imagem do Filme 1" width='100'></td>
             <td> x-policial Brian O'Conner se muda de Los Angeles para Miami para recomeçar sua vida. Ele acaba se envolvendo em rachas na sua nova cidade com seu amigo Tej e Suki. Suas aventuras terminam quando ele é preso e faz um acordo com agentes do FBI.x-policial Brian O'Conner se muda de Los Angeles para Miami para recomeçar sua vida. Ele acaba se envolvendo em rachas na sua nova cidade com seu amigo Tej e Suki. Suas aventuras terminam quando ele é preso e faz um acordo com agentes do FBI.
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/ONs4_PtakGc?si=__cHCilCHMXIgcfJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </tr>
          </tr>
             <td>velozes e furiosos 5</td>
             <td><img src="61thyihqq1L._AC_UF894,1000_QL80_.jpg" alt="Imagem do Filme 2" width='100'></td>
             <td>  Desde que o ex-policial Brian O'Conner e Mia Toretto libertaram Dom da prisão, eles viajam pelo mundo para fugir das autoridades. No Rio de Janeiro, eles são obrigados a fazer um último trabalho antes de ganhar sua liberdade definitiva.
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/e4tEwEZYELc?si=zFhkowZTMbK50eh2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </tr>
          <tr>
             <td>velozes e furiosos 7</td>
             <td><img src="054397.webp" alt="Imagem do Filme 3" width='100'></td>
