--- a/index.html
+++ b/index.html
@@ -38,27 +38,32 @@ explorar os titulos que marcaram geracoes, com suas historias envolventes e atua
             <td>velozes e furiosos 7</td>
             <td><img src="054397.webp" alt="Imagem do Filme 3" width='100'></td>
             <td>Um agente do governo oferece ajuda para cuidar de Shaw em troca de Dom e o grupo resgatar um hacker sequestrado. Dessa vez, não se trata apenas de velocidade: 
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/hujU0dw6Erk?si=jYU2DYBtzP7z4oN-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
          <tr>
             <td>scooby doo</td>
             <td><img src="90349eb449a7cf3161e743765e8114ddb3585f2cf6ed04810452b10bc0974f87 (1).jpg" alt="Imagem do Filme 4" width='100'></td>
             <td>Scooby-Doo é o animal de estimação e o companheiro de longa vida de Salsicha Rogers. Ele pode falar e ficar sobre duas patas por muito tempo. É medroso, porém tem um coração de ouro e, assim como Salsicha, é comilão. O personagem utiliza muito o bordão "Scooby-dooby-doo"
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/9mxz3Ma2DLk?si=4Hd4Ql45g2Edbdzb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
          <tr>
             <td>velozes e furiosos 8</td>
             <td><img src="1578264-poster.webp" alt="Imagem do Filme 5" width='100'></td>
             <td>Depois da aposentadoria de Brian e Mia, Dom e Letty aproveitam a lua de mel e levam uma vida pacata e normal. Mas a adrenalina do passado volta com tudo quando uma mulher misteriosa obriga Dom a retornar ao mundo do crime e da velocidade.
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/KvSlvtPnZTo?si=5dg51urelXbES3h7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
          <tr>
             <td>vingadores ultimato</td>
             <td><img src="2428965.jpg" alt="Imagem do Filme 6" width='100'></td>
             <td>Após Thanos eliminar metade das criaturas vivas, os Vingadores têm de lidar com a perda de amigos e entes queridos. Com Tony Stark vagando perdido no espaço sem água e comida, Steve Rogers e Natasha Romanov lideram a resistência contra o titã louc
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/PgrmbRID0eY?si=p-EleeVjFlSk-lwl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
          <tr>
             <td>velozes e furiosos 9</td>
             <td><img src="3385237.jpg" alt="Imagem do Filme 7" width='100'></td>
             <td>Dominic Toretto e Letty vivem uma vida pacata ao lado do filho. Mas eles logo são ameaçados pelo passado de Dom: seu irmão desaparecido Jakob, que retorna e está trabalhando ao lado de Cipher. Cabe a Dom reunir a equipe novamente para enfrentá-l
-         </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/PgrmbRID0eY?si=p-EleeVjFlSk-lwl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
          <tr>
             <td>velozes e furiosos 6</td> 
             <td><img src="20528636.webp" alt="Imagem do Filme 8" width='100'></td>
